docs: update benchmarks and README with TensorRT results
- Add TensorRT FP16 benchmark (180 FPS, 2.5x speedup)
- Update scripts list in README structure
- Mark completed experiments in benchmarks
- Clean old training runs (saved ~4GB)

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ venv.bak/
 # -----------------------------------------------------------------------------
 # IDEs y Editores
 # -----------------------------------------------------------------------------
+.claude/
 .idea/
 .vscode/
 *.swp
