feat: add Gradio web app for VR Pillar Detector
- Add scripts/app.py with full web interface
  - Inference tab (image and video)
  - Metrics and benchmark tab
  - Training configuration tab
  - Info tab with documentation
- Add docs/GUIDE.md with app usage guide
- Update docs/DIARY.md with all development problems and solutions
- Add gradio>=5.0.0 to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,12 @@ tensorboard>=2.14.0
 tqdm>=4.66.0
 
 # -----------------------------------------------------------------------------
+# Interfaz Web
+# -----------------------------------------------------------------------------
+# Gradio para la aplicación web interactiva
+gradio>=5.0.0
+
+# -----------------------------------------------------------------------------
 # Roboflow (Opcional - para descarga directa de datasets)
 # -----------------------------------------------------------------------------
 # Descomenta si quieres descargar datasets directamente desde Roboflow
